// protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";

package order;
option go_package = "./proto/order";

//import "google/protobuf/timestamp.proto";

message Payment {
  string ID = 1;
  //google.protobuf.Timestamp  Timestamp = 2;
  string  Timestamp = 2;
}

message ShopItem {
  string ID = 1;
  string Title = 2;
  string Description = 3;
  uint64 Quantity = 4;
  double Price = 5;
}

message Order {
  string ID = 1;
  repeated ShopItem ShopItems = 2;
  bool Paid = 3;
  bool Submitted = 4;
  bool Completed = 5;
  bool Canceled = 6;
  double TotalPrice = 7;
  string AccountEmail = 8;
  string CancelReason = 9;
  string DeliveryAddress = 10;
  string  DeliveryTimestamp = 11;
  //google.protobuf.Timestamp  DeliveryTimestamp = 11;
  Payment Payment = 12;
}

message CreateOrderReq {
  string AccountEmail = 1;
  repeated ShopItem ShopItems = 2;
  string DeliveryAddress = 3;
}

message CreateOrderRes {
  string AggregateID = 1;
}

message PayOrderReq {
  string AggregateID = 1;
  Payment Payment = 2;
}

message PayOrderRes {
  string AggregateID = 1;
}

message SubmitOrderReq {
  string AggregateID = 1;
}

message SubmitOrderRes {
  string AggregateID = 1;
}

message GetOrderByIDReq {
  string AggregateID = 1;
}

message GetOrderByIDRes {
  Order Order = 1;
}

message UpdateShoppingCartReq {
  string AggregateID = 1;
  repeated ShopItem ShopItems = 2;
}

message UpdateShoppingCartRes {}

message CancelOrderReq {
  string AggregateID = 1;
  string CancelReason = 2;
}

message CancelOrderRes {}

message CompleteOrderReq {
  string AggregateID = 1;
  string DeliveryTimestamp = 2;
  //google.protobuf.Timestamp  DeliveryTimestamp = 2;
}

message CompleteOrderRes {}

message ChangeDeliveryAddressReq {
  string AggregateID = 1;
  string DeliveryAddress = 2;
}

message ChangeDeliveryAddressRes {}

message SearchReq {
  string SearchText = 1;
  int64 Page = 2;
  int64 Size = 3;
}

message SearchRes {
  Pagination Pagination = 1;
  repeated Order Orders = 2;
}

message Pagination {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
}

// /api/orders
service OrderService {
  //POST, /
  rpc CreateOrder(CreateOrderReq) returns (CreateOrderRes);
  //POST, /pay/:id
  rpc PayOrder(PayOrderReq) returns (PayOrderRes); // Pay existing order
  //PUT, /submit/:id
  rpc SubmitOrder(SubmitOrderReq) returns (SubmitOrderRes);
  //PUT, /cart/:id
  rpc UpdateShoppingCart(UpdateShoppingCartReq) returns (UpdateShoppingCartRes); // update exit shopping cart
  //PUT, /cancel/:id
  rpc CancelOrder(CancelOrderReq) returns (CancelOrderRes); // Cancel order
  //PUT, /complete/:id
  rpc CompleteOrder(CompleteOrderReq) returns (CompleteOrderRes); // Complete order
  //PUT, /address/:id
  rpc ChangeDeliveryAddress(ChangeDeliveryAddressReq) returns (ChangeDeliveryAddressRes); // Change delivery address order
  //GET, /:id
  rpc GetOrderByID(GetOrderByIDReq) returns (GetOrderByIDRes);  // Get order by id
  //GET, /search
  rpc Search(SearchReq) returns (SearchRes); // ES search
}